# paint

./: .gitignore  Cargo.toml  README.md  main.c  paint.excalidraw
src/: body.rs  core.rs  header.rs  main.rs  sidebar.rs
src/components/: card.rs
